--- a/admin.html
+++ b/admin.html
@@ -77,19 +77,20 @@
            <!--MAIN DASHBOARD-->
 
            <main>
-            <h1> DashBoard</h1>
+            <h1> Admin DashBoard</h1>
 
             <div class="date">
                 <input type="date" placeholder="date"/>
             </div>
-            
+
+            <!--BEGINNING OF SALES-->
             <div class="insights">
                 <div class="sales">
                     <span class="material-icons-sharp">analytics</span>
                     <div class="middle">
                         <div class="left">
                             <h3> Total sales</h3>
-                            <h1> $25,000</h1>
+                            <h1> $30,000</h1>
                         </div>
                         <div class="progress">
                             <svg>
@@ -105,12 +106,14 @@
                 </div>
 
                 <!--END OF SALES--->
-                <div class="sales">
-                    <span class="material-icons-sharp">analytics</span>
+
+                <!-- BEGINNING OF EXPENSES-->
+                <div class="expenses">
+                    <span class="material-icons-sharp">bar_chart</span>
                     <div class="middle">
                         <div class="left">
-                            <h3> Total sales</h3>
-                            <h1> $25,000</h1>
+                            <h3> Total Expenses</h3>
+                            <h1> $12,978</h1>
                         </div>
                         <div class="progress">
                             <svg>
@@ -118,12 +121,88 @@
                             </svg>
 
                             <div class="number">
-                                <p>81%</p>
+                                <p>65%</p>
                             </div>
                         </div>
                     </div>
                     <small class="text-muted">Last 24hrs</small>
                 </div>
+                <!--END OF EXPENSES-->
+
+                <!--BEGINNING OF INCOME-->
+                <div class="income">
+                    <span class="material-icons-sharp">stacked_line_chart</span>
+                    <div class="middle">
+                        <div class="left">
+                            <h3> Total Income</h3>
+                            <h1> $17,022</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx='38' cy='38' r='36'></circle>
+                            </svg>
+
+                            <div class="number">
+                                <p>41%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24hrs</small>
+                </div>
+                <!--END OF INCOME-->
+            </div>
+            <!-- END OF INSIGHTS SECTION-->
+
+            <div class="recent-orders">
+                <h2> Recent Orders</h2>
+                <table>
+                    <thead>
+                        <tr>
+                        <th>Product Name</th>
+                        <th>Product Number</th>
+                        <th>Payment</th>
+                        <th>Status Info</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> Apple Ipad Mini Pro</td>
+                            <td> #A1092</td>
+                            <td> Due</td>
+                            <td class="warning"> Pending</td>
+                            <td class="primary"> Details</td>
+                        </tr>
+                        <tr>
+                            <td> Apple Ipad Mini Pro</td>
+                            <td> #A1092</td>
+                            <td> Due</td>
+                            <td class="warning"> Pending</td>
+                            <td class="primary"> Details</td>
+                        </tr>
+                        <tr>
+                            <td> Apple Ipad Mini Pro</td>
+                            <td> #A1092</td>
+                            <td> Due</td>
+                            <td class="warning"> Pending</td>
+                            <td class="primary"> Details</td>
+                        </tr>
+                        <tr>
+                            <td> Apple Ipad Mini Pro</td>
+                            <td> #A1092</td>
+                            <td> Due</td>
+                            <td class="warning"> Pending</td>
+                            <td class="primary"> Details</td>
+                        </tr>
+                        <tr>
+                            <td> Apple Ipad Mini Pro</td>
+                            <td> #A1092</td>
+                            <td> Due</td>
+                            <td class="warning"> Pending</td>
+                            <td class="primary"> Details</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a href="#"> Show All</a>
             </div>
            </main>
         </div>
