--- a/admin.html
+++ b/admin.html
@@ -204,8 +204,120 @@
                 </table>
                 <a href="#"> Show All</a>
             </div>
-           </main>
+        </main>
+        <!-- END OF MAIN DASHBOARD-->
+
+        <div class="right">
+            <div class="top">
+                <button id="menu">
+                   <span class="material-icons-sharp">menu</span> 
+                </button>
+                <div class="theme-toggler">
+                    <span class="material-icons-sharp active">light_mode</span>
+                    <span class="material-icons-sharp">dark_mode</span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hello, <b> Reina</b></p>
+                        <small class="text-muted">Admin</small>
+                    </div>
+                    <div class="profile-photo">
+                        <img src="./images/logoipsum-298.svg" alt="profile photo">
+                    </div>
+                </div>
+            </div>
+
+            <!-- END OF THE TOP-->
+
+            <!--- RECENT UPDATES SECTION-->
+
+            <div class="recent-updates">
+                <h2> Recent Updates</h2>
+                <div class="updates">
+                    <div class="update">
+                      <div class="profile-photo">
+                        <img src="./images/logoipsum-298.svg" alt="profile-photo-2">
+                      </div>  
+                      <div class="message">
+                        <p><b>Reina Sella</b> received her order of the Apple Iphone 14 Pro Max</p>
+                        <small class="text-muted"> 2 Minutes ago</small>
+                      </div>
+                    </div>
+                    <div class="update">
+                        <div class="profile-photo">
+                          <img src="./images/logoipsum-298.svg" alt="profile-photo-2">
+                        </div>  
+                        <div class="message">
+                          <p><b>Fortune Sella</b> received her order of the Tecno flip phone X2</p>
+                          <small class="text-muted"> 50 Seconds ago</small>
+                        </div>
+                      </div>
+                      <div class="update">
+                        <div class="profile-photo">
+                          <img src="./images/logoipsum-298.svg" alt="profile-photo-3">
+                        </div>  
+                        <div class="message">
+                          <p><b>John Teye</b> received his order of the SamSung Ipad</p>
+                          <small class="text-muted"> 30 Seconds ago</small>
+                        </div>
+                      </div>
+                </div>
+            </div>
+
+            <!-- END OF RECENT UPDATE SECTION-->
+
+            <!-- BEGINNING OF SALES ANALYTICS-->
+            <div class="sales-analytics">
+                <h2> Sales Analytics</h2>
+                <div class="item online">
+                    <div class="icon">
+                        <span class="material-icons-sharp">shopping_cart</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3> ONLINE ORDERS</h3>
+                            <small class="text-muted"> Last 24hrs</small>
+                        </div>
+                        <h5 class="success"> +30%</h5>
+                        <h3> 1020</h3>
+                    </div>
+                </div>
+                <div class="item offline">
+                    <div class="icon">
+                        <span class="material-icons-sharp">local_mall</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3> OFFLINE ORDERS</h3>
+                            <small class="text-muted"> Last 24hrs</small>
+                        </div>
+                        <h5 class="danger"> -20%</h5>
+                        <h3> 920</h3>
+                    </div>
+                </div>
+                <div class="item customers">
+                    <div class="icon">
+                        <span class="material-icons-sharp">person</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3> NEW CUSTOMERS</h3>
+                            <small class="text-muted"> Last 24hrs</small>
+                        </div>
+                        <h5 class="success"> +50%</h5>
+                        <h3> 320</h3>
+                    </div>
+                </div>
+                <div class="item add-product">
+                    <div>
+                        <span class="material-icons-sharp"> add</span>
+                        <h3> Add Product</h3>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
 
     </body>
 </html>
