--- a/admin.html
+++ b/admin.html
@@ -223,7 +223,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="./images/logoipsum-298.svg" alt="profile photo">
+                        <img src="./images/profile-1.jpg" alt="profile photo">
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                 <div class="updates">
                     <div class="update">
                       <div class="profile-photo">
-                        <img src="./images/logoipsum-298.svg" alt="profile-photo-2">
+                        <img src="./images/profile-2.jpg" alt="profile-photo-2">
                       </div>  
                       <div class="message">
                         <p><b>Reina Sella</b> received her order of the Apple Iphone 14 Pro Max</p>
@@ -246,7 +246,7 @@
                     </div>
                     <div class="update">
                         <div class="profile-photo">
-                          <img src="./images/logoipsum-298.svg" alt="profile-photo-2">
+                          <img src="./images/profile-2.jpg" alt="profile-photo-2">
                         </div>  
                         <div class="message">
                           <p><b>Fortune Sella</b> received her order of the Tecno flip phone X2</p>
@@ -255,7 +255,7 @@
                       </div>
                       <div class="update">
                         <div class="profile-photo">
-                          <img src="./images/logoipsum-298.svg" alt="profile-photo-3">
+                          <img src="./images/profile-man.png" alt="profile-photo-3">
                         </div>  
                         <div class="message">
                           <p><b>John Teye</b> received his order of the SamSung Ipad</p>
