--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,8 @@
                 <a href="#">
                     <span class="material-icons-sharp">grid_view</span>
                     <h3> DashBoard</h3>
-                </a> <a href="#"  class="active">
+                </a> 
+                <a href="#"  class="active">
                     <span class="material-icons-sharp">person_outline</span>
                     <h3> Customers</h3>
                 </a>
@@ -210,7 +211,7 @@
         <div class="right">
             <div class="top">
                 <button id="menu">
-                   <span class="material-icons-sharp">menu</span> 
+                   <span class="material-icons-sharp grid-view">menu</span> 
                 </button>
                 <div class="theme-toggler">
                     <span class="material-icons-sharp active">light_mode</span>
