--- a/admin.html
+++ b/admin.html
@@ -210,7 +210,7 @@
 
         <div class="right">
             <div class="top">
-                <button id="menu">
+                <button id="menu-btn">
                    <span class="material-icons-sharp grid-view">menu</span> 
                 </button>
                 <div class="theme-toggler">
@@ -320,5 +320,7 @@
         </div>
     </div>
 
+
+    <script src="./admin.js" defer></script>
     </body>
 </html>
