--- a/admin.html
+++ b/admin.html
@@ -166,6 +166,7 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <!--
                         <tr>
                             <td> Apple Ipad Mini Pro</td>
                             <td> #A1092</td>
@@ -201,7 +202,8 @@
                             <td class="warning"> Pending</td>
                             <td class="primary"> Details</td>
                         </tr>
-                    </tbody>
+                    -->
+                    </tbody> 
                 </table>
                 <a href="#"> Show All</a>
             </div>
@@ -321,6 +323,7 @@
     </div>
 
 
+    <script src="./orders.js" defer></script>
     <script src="./admin.js" defer></script>
     </body>
 </html>
